--- a/pi-monitor.service
+++ b/pi-monitor.service
@@ -3,7 +3,7 @@ Description=Pi Monitor
 After=network.target
 
 [Service]
-ExecStart=/usr/bin/python3 -u /usr/local/bin/pi-monitor.py
+ExecStart=/usr/bin/python3 -u /usr/local/bin/pi-monitor.py 8088
 Restart=always
 User=pi
 
